--- a/src/app/components/filmes-alugados/filmes-alugados.component.css
+++ b/src/app/components/filmes-alugados/filmes-alugados.component.css
@@ -61,7 +61,7 @@
     font-size: 1rem;
     width: 8vw;
     &:not(:disabled) {
-        color: var(--primary-text-color);
-        background-color: var(--primary-color);
+        color: var(--primary-text-color) !important;
+        background-color: var(--primary-color) !important;
     }
 }
