--- a/src/app/components/registro-de-membros/registro-de-membros.component.css
+++ b/src/app/components/registro-de-membros/registro-de-membros.component.css
@@ -29,7 +29,7 @@
 
     &:not(:disabled) {
         width: 100%;
-        color: var(--primary-text-color);
-        background-color: var(--primary-color);
+        color: var(--primary-text-color) !important;
+        background-color: var(--primary-color) !important;
     }
 }
