--- a/src/app/components/filmes-alugados/filmes-alugados.component.html
+++ b/src/app/components/filmes-alugados/filmes-alugados.component.html
@@ -1,18 +1,20 @@
-<section  class="wrapper">
+<section class="wrapper">
     <mat-card class="main-card">
         <mat-card-header>
             <mat-card-title><h2 class="page-title">Registro de filmes alugados</h2></mat-card-title>
         </mat-card-header>
         <mat-divider class="divider"/>
         <mat-card-content>
-        <div class="movie-list" *ngIf="movieList.length > 0, else noMovies">
-            <div *ngFor="let movie of movieList" class="card-aluguel">
-                <app-card-alugados  [movie]="movie" />
+            <div *ngIf="movieList | async as movies; else noMovies" class="movie-list">
+                <div *ngIf="(movies?.length ?? 0) > 0">
+                    <div *ngFor="let movie of movies" class="card-aluguel">
+                        <app-card-alugados [movie]="movie"></app-card-alugados>
+                    </div>
+                </div>
             </div>
-        </div>
-        <ng-template #noMovies>
-            <p class="no-movies-title">Nenhum livro encontrado!</p>
-        </ng-template>
-</mat-card-content>
-</mat-card>        
+            <ng-template #noMovies>
+                <p class="no-movies-title">Nenhum filme encontrado!</p>
+            </ng-template>
+        </mat-card-content>
+    </mat-card>
 </section>
