--- a/src/app/components/filmes-mais-alugados/filmes-mais-alugados.component.html
+++ b/src/app/components/filmes-mais-alugados/filmes-mais-alugados.component.html
@@ -4,13 +4,15 @@
             <mat-card-title><h2 class="page-title">Filmes mais alugados</h2></mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <div class="movie-list" *ngIf="movieList.length > 0; else noMovies">
-                <div *ngFor="let movie of movieList; let i = index" class="card-aluguel">
-                    <app-card-mais-alugados [number]="i + 1" [movie]="movie"/>
+            <div *ngIf="(movieList | async) as movies; else noMovies" class="movie-list">
+                <div *ngIf="movies && movies.length > 0">
+                    <div *ngFor="let movie of movies; let i = index" class="card-aluguel">
+                        <app-card-mais-alugados [number]="i + 1" [movie]="movie"/>
+                    </div>
                 </div>
             </div>
             <ng-template #noMovies>
-                <p class="no-movies-title">Nenhum livro encontrado!</p>
+                <p class="no-movies-title">Nenhum filme encontrado!</p>
             </ng-template>
         </mat-card-content>
     </mat-card>
