--- a/src/app/components/movie-edit-dialog/movie-edit-dialog.component.html
+++ b/src/app/components/movie-edit-dialog/movie-edit-dialog.component.html
@@ -2,7 +2,7 @@
   <h2 mat-dialog-title class="title">Formulário de edição</h2>
   <mat-dialog-content class="subtitle">
   <form [formGroup]="EditMovieForm" (ngSubmit)="onSubmit()">
-  <p>Editar filme <b>"{{data.name}}"</b></p>
+  <p>Editar filme <b>"{{data.nome}}"</b></p>
     <div>
         <mat-form-field appearance="fill" hideRequiredMarker class="form-input">
             <mat-label>Nome</mat-label>
