--- a/src/app/components/card-alugados/card-alugados.component.html
+++ b/src/app/components/card-alugados/card-alugados.component.html
@@ -1,7 +1,7 @@
 <mat-card appearance="outlined" class="movie-item">
     <mat-card-header>
-        <mat-card-title class="card-title">{{movie.name}}</mat-card-title>
-        <mat-card-subtitle class="card-subtitle">{{movie.synopsis}}</mat-card-subtitle>
+        <mat-card-title class="card-title">{{movie.nome}}</mat-card-title>
+        <mat-card-subtitle class="card-subtitle">{{movie.sinopse}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content class="rating-row">
