--- a/src/app/components/card-filmes/card-filmes.component.html
+++ b/src/app/components/card-filmes/card-filmes.component.html
@@ -1,10 +1,10 @@
 <mat-card appearance="outlined" class="movie-item">
     <mat-card-header class="card-header">
         <mat-card-title class="card-title"> 
-                <p>{{movie.name}}</p> 
-                <b>R${{movie.price.toFixed(2)}}</b>
+                <p>{{movie.nome}}</p> 
+                <b>R${{movie.preco.toFixed(2)}}</b>
         </mat-card-title>
-        <mat-card-subtitle class="card-subtitle">{{movie.synopsis}}</mat-card-subtitle>
+        <mat-card-subtitle class="card-subtitle">{{movie.sinopse}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content class="rating-row">
