--- a/src/app/components/card-mais-alugados/card-mais-alugados.component.html
+++ b/src/app/components/card-mais-alugados/card-mais-alugados.component.html
@@ -2,5 +2,5 @@
     <mat-card-header>
         <mat-card-title class="card-title" [ngClass]="{'texto-dourado': number === 1, 'texto-prata' : number === 2, 'texto-bronze' : number === 3}">
             {{number}}. {{movie.nome}}</mat-card-title>
-        <mat-card-subtitle class="card-subtitle">Emprestado <b>{{movie.rentCounter}}</b> vezes</mat-card-subtitle>
+        <mat-card-subtitle class="card-subtitle">Emprestado <b>{{movie.contadorEmprestimos}}</b> vezes</mat-card-subtitle>
     </mat-card-header>
